# Experimentation_Hub_for_RAG

./: .env.example  LICENSE.txt  README.md  pyproject.toml
apps/: gradio_app.py
config/: config.yaml
experiments/: analysis.ipynb  generator_timings.csv  measure_generator_timings.py  measure_retriever_timings.py  retriever_k_sweep_timings.csv
helpers/weaviate db/: docker-compose.yml
src/: agents.py  data_loader.py  embeddings.py  generator.py  graphs.py  memory.py  rag_chain.py  rerankers.py  retrievers.py  splitters.py  vectorstores.py
src/rag_architectures/: agentic_RAG.py  graph_RAG.py  hybrid_RAG.py  online_RAG.py  rerank_RAG.py  standard_RAG.py  standard_RAG_with_memory.py
tests/: test_all_providers.py  test_data_loaders.py  test_embeddings.py  test_memory.py  test_splitters.py  test_vectorstores.py
